--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Marvel:wght@400;700&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Marvel:wght@400;700&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400&display=swap'); */
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,400&family=Russo+One&family=Ubuntu:wght@400;500;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
-  font-family: 'Marvel', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 .active {
   border-bottom: 2px solid #ec1d24;
@@ -37,7 +40,17 @@
   background-image: url('https://images-eu.ssl-images-amazon.com/images/G/31/img19/Toys/Avengers/MainBanner_1242x350._CB1198675309_.png');
   background-position: center;
   background-size: cover;
-  background-color: rgba(0, 0, 0, 0.377);
+  background-color: rgba(0, 0, 0, 0.7);
   background-blend-mode: multiply;
   height: 300px;
+}
+.ubuntu-font {
+  font-family: 'Ubuntu', sans-serif;
+}
+.russo-font {
+  font-family: 'Russo One', sans-serif;
+}
+.bannerHeader {
+  text-shadow: -2px 2px 0 #fff, 2px 2px 0 #fff, 2px -2px 0 #fff,
+    -2px -2px 0 #fff;
 }
