--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,33 @@
   text-shadow: -2px 2px 0 #fff, 2px 2px 0 #fff, 2px -2px 0 #fff,
     -2px -2px 0 #fff;
 }
+
+
+/* ///// */
+.categoryHover {
+  --m:
+    radial-gradient(circle farthest-side at right,#000 99%,#0000) 
+      0 100%/46% 92% no-repeat,
+    radial-gradient(circle farthest-side at left ,#000 99%,#0000) 
+      100% 0/46% 92% no-repeat;
+  -webkit-mask: var(--m);
+          mask: var(--m);
+  filter: grayscale(.5);
+  transition: .3s linear;
+  cursor: pointer;
+}
+.categoryHover:hover {
+  -webkit-mask-position: 7.5% 50%,92.5% 50%;
+          mask-position: 7.5% 50%,92.5% 50%;
+  filter: grayscale(0);
+}
+
+/* body {
+  margin: 0;
+
+  display: grid;
+  height: 100vh;
+  grid-auto-flow :column;
+  place-content: center;
+  gap: 40px;
+} */
